css/style.css
/* ... */
.timeline>li.timeline-inverted>.timeline-panel:before {
	right: auto;
	left: -15px;
	border-right-width: 15px;
	border-left-width: 0;
}
.timeline>li.timeline-inverted>.timeline-panel:after {
	right: auto;
	left: -14px;
	border-right-width: 14px;
	border-left-width: 0;
}
.timeline>li:last-child {
	margin-bottom: 40px;
}
.timeline .timeline-heading h4 {
	margin-top: 0;
	text-transform: uppercase;
	font-size: 16px;
}
.timeline .timeline-heading h2 {
	margin-top: 30px;
}
.timeline .timeline-heading h4.subheading {
	text-transform: none;
	color: #629ca7;
	font-size: 20px;
}

.timeline .timeline-body>p, .timeline .timeline-body>ul {
	margin-bottom: 0;
}
/* Contact Section */
#contact {
	padding: 100px 0 40px 0;
	color: #121d1f;
	background: #7bc3d1;
}
#contact h2 {
	color: #fff;
}
#contact hr {
	background: rgba(255,255,255,0.3);
}
#contact h3 {
	padding-top: 20px;
	font-size: 20px;
	font-weight: 400;
	color: #fff;
}
#contact form {
	padding: 30px 0;
}
#contact i.fa {
	color: #121d1f;
	margin-bottom: 10px;
}
#contact .text-danger {
	color: #E87E04;
	text-align: left;
}
label {
	font-size: 12px;
	font-weight: 400;
	font-family: 'Open Sans', sans-serif;
	float: left;
}
#contact .form-control {
	display: block;
	width: 100%;
	padding: 6px 12px;
	font-size: 14px;
	line-height: 1.42857143;
	color: #2c3e50;
	background-color: rgba(255,255,255,0.8);
	background-image: none;
	border: 0;
	border-radius: 2px;
	-webkit-box-shadow: none;
	box-shadow: none;
	-webkit-transition: none;
	-o-transition: none;
	transition: none;
}
#contact .form-control:focus {
	border-color: inherit;
	outline: 0;
	-webkit-box-shadow: transparent;
	box-shadow: transparent;
}
.form-control::-webkit-input-placeholder {
color: #2c3e50;
}
.form-control:-moz-placeholder {
color: #2c3e50;
}
.form-control::-moz-placeholder {
color: #2c3e50;
}
.form-control:-ms-input-placeholder {
color: #2c3e50;
}
#contact .social {
	margin-top: 60px;
}
#contact .social ul li {
	display: inline-block;
	margin: 0 20px;
}
#contact .social i.fa {
	font-size: 30px;
	padding: 4px 5px;
	color: #fff;
	transition: all 0.5s;
}
#contact .social i.fa:hover {
	color: #121d1f;
}
#contact .btn {
	background-color: transparent;
	border: 1px solid #fff;
	border-radius: 0;
	padding: 10px 20px;
	color: #fff;
	margin-top: 15px;
}
#contact .btn:hover, #contact .btn:focus {
	background-color: #121d1f;
	border: 1px solid #121d1f;
}
.btn:active, .btn.active {
	background-image: none;
	outline: 0;
	-webkit-box-shadow: none;
	box-shadow: none;
}
a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus {
	outline: none;
	outline-offset: none;
}
/* Footer Section*/
#footer {
	background: #121d1f;
	color: #7d8384;
	padding: 30px 0 25px 0;
}
#footer p {
	font-size: 13px;
}
#footer a {
	color: #a0a5a5;
}
#footer a:hover {
	color: #7bc3d1;
}

/* Media Queries */
@media(min-width:768px) {
.intro {
	height: 100%;
	padding: 0;
	text-align: left;
	color: #fff;
}
.intro H1 {
	font-size: 60px;
	font-weight: 500;
	letter-spacing: -2px;
}
.intro .name {
	font-weight: 600;
}
.intro .intro-text {
	max-width: 75%;
}
.intro .intro-text p {
	font-family: 'Lato', sans-serif;
	font-size: 20px;
	margin-bottom: 40px;
	margin-top: 20px;
}
section {
	padding: 120px 0;
}
header .intro-text {
	padding-top: 300px;
	padding-bottom: 200px;
}
.timeline:before {
	left: 50%;
}
.timeline>li {
	margin-bottom: 100px;
	min-height: 100px;
}
.timeline>li .timeline-panel {
	float: left;
	width: 41%;
	padding: 0 20px 20px 30px;
	text-align: left;
}
.timeline>li .timeline-image {
	left: 50%;
	width: 100px;
	height: 100px;
	margin-left: -50px;
}
.timeline>li .timeline-image h4 {
	margin-top: 16px;
	line-height: 18px;
	font-weight: 400;
}
.timeline>li.timeline-inverted>.timeline-panel {
	float: right;
	padding: 0 30px 20px 20px;
	text-align: left;
}
}

@media(min-width:992px) {
#here-me h1 {
	margin: 10px 0 0px;
}
.timeline>li {
	min-height: 150px;
}
.timeline>li .timeline-panel {
	padding: 0 20px 20px;
}
.timeline>li .timeline-image {
	width: 150px;
	height: 150px;
	margin-left: -75px;
	background:#7bc3d1;
}

.timeline>li .timeline-image h4 {
	margin-top: 30px;
	font-size: 18px;
	line-height: 26px;
	color: black;
}
.timeline>li .timeline-image h4:hover {
	margin-top: 40px;
	font-size: 18px;
	line-height: 26px;
	color: white;
}

.timeline>li.timeline-inverted>.timeline-panel {
	padding: 0 20px 20px;
}
}

@media(min-width:1200px) {
.timeline>li {
	min-height: 170px;
}
.timeline>li .timeline-panel {
	padding: 10px 20px 20px 100px;
}
.timeline>li .timeline-image {
	width: 150px;
	height: 150px;
	margin-left: -75px;
}
.timeline>li .timeline-image h4 {
	margin-top: 40px;
	font-weight: 400;
}
.timeline>li.timeline-inverted>.timeline-panel {
	padding: 10px 100px 20px 20px;
}
}

